<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="na.brexitsoundboard.LiamActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonLiamBlamingTheMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_BlamingTheMedia" />

            <Button
                android:id="@+id/buttonLiamChickenObsessedMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_ChickenObsessedMedia" />

            <Button
                android:id="@+id/buttonLiamCitizensFirstNotPolitics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_CitizensFirstNotPolitics" />

            <Button
                android:id="@+id/buttonLiamEasiestInHumanHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_EasiestInHumanHistory" />

            <Button
                android:id="@+id/buttonLiamHowWeConductOurselves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_HowWeConductOurselves" />

            <Button
                android:id="@+id/buttonLiamIntemperateLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_IntemperateLanguage" />

            <Button
                android:id="@+id/buttonLiamNotHavingADealWouldBeBad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_NotHavingADealWouldBeBad" />

            <Button
                android:id="@+id/buttonLiamThisIsNotJustAboutEurope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_ThisIsNotJustAboutEurope" />

            <Button
                android:id="@+id/buttonLiamTooLazyAndTooFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_TooLazyAndTooFat" />

            <Button
                android:id="@+id/buttonLiamTremendousOpportunitiesOutThere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_TremendousOpportunitiesOutThere" />

            <Button
                android:id="@+id/buttonLiamWeCantBeBlackmailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_liam_WeCantBeBlackmailed" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
