<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="na.brexitsoundboard.BorisActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button350MillionPoundsAWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_350MillionPoundsAWeek" />

            <Button
                android:id="@+id/buttonAllYourOptionsAreGood"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_AllYourOptionsAreGood" />

            <Button
                android:id="@+id/buttonCostOfGettingOutVirtuallyNil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_CostOfGettingOutVirtuallyNil" />

            <Button
                android:id="@+id/buttonGoWhistle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_GoWhistle" />

            <Button
                android:id="@+id/buttonHiggeldyPiggeldyNations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_HiggeldyPiggeldyNations" />

            <Button
                android:id="@+id/buttonMeetOurObligations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_MeetOurObligations" />

            <Button
                android:id="@+id/buttonPoundIsStable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_PoundIsStable" />

            <Button
                android:id="@+id/buttonRightsCompletelyProtected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_RightsCompletelyProtected" />

            <Button
                android:id="@+id/buttonWeExportTvAerials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_WeExportTvAerials" />

            <Button
                android:id="@+id/buttonWeightLiftedFromBritishBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_WeightLiftedFromBritishBusiness" />

            <Button
                android:id="@+id/buttonWinWinForallOfUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_boris_WinWinForallOfUs" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
