<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="na.brexitsoundboard.DavidActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonDavidConfidentOfAGoodOutcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_ConfidentOfAGoodOutcome" />

            <Button
                android:id="@+id/buttonDavidConstructiveAmbiguity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_ConstructiveAmbiguity" />

            <Button
                android:id="@+id/buttonDavidDifficultToReadWhatWeIntend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_DifficultToReadWhatWeIntend" />

            <Button
                android:id="@+id/buttonDavidFollowUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_FollowUs" />

            <Button
                android:id="@+id/buttonDavidIRuleNothingInNothingOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_IRuleNothingInNothingOut" />

            <Button
                android:id="@+id/buttonDavidItsGettingABitTense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_ItsGettingABitTense" />

            <Button
                android:id="@+id/buttonDavidItsGoingIncrediblyWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_ItsGoingIncrediblyWell" />

            <Button
                android:id="@+id/buttonDavidNobodyPretendedThisWillBeSimpleOrEasy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_NobodyPretendedThisWillBeSimpleOrEasy" />

            <Button
                android:id="@+id/buttonDavidVeryGoodLawyers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_david_VeryGoodLawyers" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
